23/07/2011 Changes

Adding base support in Object to be an object. Working towards class parts.


22/07/2011 Changes

Modified <init> method to call applyTo() on itself (instance of java dynamic class) so 
calls 'self' have a proper receiver. In preparation for namespaces/packages.
ie: so in a statement like "self import: 'package'", self refers to a proper object.
Using Object cache in resolving class Objects. 
Added primitive to register an object in classes cache.


21/07/2011 Changes

Moves primitives inline - might make Object class really big but stack traces are shorter.
Intoduced Redline runtime exception to wrap non-runtime exceptions.
Started adding runtime support in Object
Added root of all objects ProtoObject to fill gap between Smalltalk Object and Java Object.


20/07/2011 Changes

Added first of new primitives - primitiveVariableAt - which will look for the referenced 
variable and then when not found will call primitiveResolveObject - which may load a new
class from source.


19/07/2011 Changes

Added ClassBytecodeWriter - used to be a single generator but cleaner if I separate.
Class being written and executed without problem.
Removed source paths from sources found in source path. 
Changing Object resolution support - moved into primitive - will support name spaces this way.


17/07/2011 Changes

Added a preprocessor to process the method definitions starting with "+" and "-".
It is expected this preprocessor will be extended over time to turn many things into
message sends the backend compiler will handle.


03/07/2011 Changes

Added runtime probe of instance, class, class instance and pool variables.


02/07/2011 Changes

Clean up how output is done - using print writers defined in environment.
Added default 'src/main/smalltalk' as path for sources.
Thinking about adding 'src/test/smalltalk'


30/06/2011 Changes

Replaced the command line processing so you can turn verbose on to get more information about